objects/copado__Artifact__c.object
<CustomObject>
    <fields>
        <fullName>copado__Artifact_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is Repository where the Artifact can be stored, in the master branch</inlineHelpText>
        <label>Artifact Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Org Credential where the metadata of the Artifact is going to be retrieved from</inlineHelpText>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Artifact</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>copado__Artifact_Repository__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Artifact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifacts</pluralLabel>
    <recordTypes>
        <fullName>copado__Git_Artifact</fullName>
        <active>true</active>
        <description>Version control system centric artifact</description>
        <label>Git Artifact</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Package_Artifact</fullName>
        <active>true</active>
        <description>Salesforce unmanaged package as artifact</description>
        <label>Package Artifact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__ArtifactNameCannotChange</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(Name) != Name</errorConditionFormula>
        <errorMessage>Artifact names are in use for DX folder structure, therefore, artifact names are not editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Name_should_not_contain_empty_space</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(Name,&apos; &apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Artifact name cannot contain white spaces</errorMessage>
    </validationRules>
</CustomObject>